--- a/m/app/config.html
+++ b/m/app/config.html
@@ -87,13 +87,8 @@
                     </div>
                 </div>
 
-                <div class="user-setting none">
-                    <!-- 클릭 > "LOGOUT 할까요?" > LOGGOUT -->
-                    <div class="set-box">
-                        <div class="i-box">
-                            <i class="fas fa-power-off"></i>
-                        </div>
-                    </div>
+                <div class="user-setting">
+                    <i class="fas fa-bars"></i>
                 </div>
             </div>
         </div>
@@ -116,12 +111,17 @@
 
                     <div class="main-body">
 
-                        <div class="main-left">
+                        <div class="main-left none">
                             <div class="option-box">
 
                                 <div class="option-header selectable active">
                                     <div class="option-header-box">
                                         <span>분배</span>
+                                    </div>
+                                </div>
+                                <div class="option-header selectable">
+                                    <div class="option-header-box">
+                                        <span>사전 주문 처리</span>
                                     </div>
                                 </div>
 
@@ -566,22 +566,6 @@
 
                             </div>
 
-                        </div>
-
-                        <div class="main-left">
-                            <div class="option-box">
-
-                                <div class="option-header selectable active">
-                                    <div class="option-header-box">
-                                        <span>사전 주문 처리</span>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="main-center">
-
                             <!-- 사전 주문 처리 -->
                             <div class="config-box error">
                                 
@@ -759,7 +743,7 @@
 
                                 </div>
 
-                            </div>
+                            </div>                            
 
                         </div>
                 </main>
