--- a/m/app/event.html
+++ b/m/app/event.html
@@ -90,13 +90,8 @@
                     </div>
                 </div>
 
-                <div class="user-setting none">
-                    <!-- 클릭 > "LOGOUT 할까요?" > LOGGOUT -->
-                    <div class="set-box">
-                        <div class="i-box">
-                            <i class="fas fa-power-off"></i>
-                        </div>
-                    </div>
+                <div class="user-setting">
+                    <i class="fas fa-bars"></i>
                 </div>
             </div>
         </div>
@@ -114,24 +109,20 @@
                             <span id="channer-name">LOTTORICH1</span>
                         </div>
 
-                    </div>
+                    </div> 
 
                     <div class="main-body">
 
-                        <div class="main-left">
+                        <div class="main-left none">
                             <div class="option-box">
                                 <div class="option-header active">
                                     <div class="option-header-box">
                                         <div class="option-title">
                                             <span>FILTER</span>
                                         </div>
-                                        <div class="option-close">
-                                            <i class="fa fa-chevron-down rotate"></i>
-                                        </div>
-
                                     </div>
                                 </div>
-                                <div class="option-body none">
+                                <div class="option-body">
                                     <div class="option-element">
                                         <span>나이</span>
                                         <select class="tocar">
@@ -188,7 +179,7 @@
                                     </div>
                                 </div>
 
-                                <div class="option-footer none">
+                                <div class="option-footer">
                                     <div class="option-footer-box">
                                         <button class="option-btn tocar apply">적용</button>
                                         <button class="option-btn tocar reset">RESET</button>
