--- a/m/vlak/channel.html
+++ b/m/vlak/channel.html
@@ -4,6 +4,7 @@
 <head>
     <title>ADAND OMS</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="../css/style.css" rel="stylesheet">
     <link href="../css/channel-box.css" rel="stylesheet">
@@ -24,54 +25,71 @@
     <div id="app">
 
         <div id="top">
+
             <div class="nav-container">
-                <div class="user-container">
 
-                    <div class="channel-box active">
-                        <div class="user-box">
-                            <div class="avatar">
-                                <img class="good">
-                            </div>
-                            <div class="user">
-                                <span>ADMINISTRATOR</span>
-                                <span class="active"><i class="fas fa-user-circle"></i></span>
-                                <span class="dot none"><i class="fas fa-circle"></i></span>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
                 <div class="logo-top">
                     <img src="../img/logomini.png"> <!-- 클릭 > reflesh -->
                 </div>
-                <div class="user-setting">
-                    <!-- 클릭 > "LOGOUT 할까요?" > LOGGOUT -->
-                    <div class="set-box">
-                        <div class="i-box">
-                            <i class="fas fa-power-off"></i>
+
+                <div class="user-container">
+                    <div class="channel-box none">
+                        <div class="user-box">
+                            <div class="avatar none">
+                                <img class="good">
+                            </div>
+                            <div class="user">
+                                <span>ALL</span>
+                                <span class="none"><i class="fas fa-angle-down"></i></span>
+                            </div>
                         </div>
                     </div>
+
+                    <div class="channel-box active">
+                        <div class="user-box">
+                            <div class="avatar none">
+                                <img class="good">
+                            </div>
+                            <div class="user">
+                                <span>LOTTORICH1</span>
+                                <span class=""><i class="fas fa-angle-down"></i></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="channel-box none">
+                        <div class="user-box">
+                            <div class="avatar none">
+                                <img class="bad">
+                            </div>
+                            <div class="user">
+                                <span>LOTTORICH2</span>
+                                <span class="none"><i class="fas fa-angle-down"></i></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="channel-box none">
+
+                        <div class="user-box">
+                            <div class="avatar none">
+                                <img class="good">
+                            </div>
+                            <div class="user">
+                                <span>LOTTORICH3</span>
+                                <span class="none"><i class="fas fa-angle-down"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="user-setting">
+                    <i class="fas fa-bars"></i>
                 </div>
             </div>
         </div>
 
         <div id="below-top">
-
-            <div id="aside">
-                <aside>
-
-                    <div class="aside-box">
-                        <i class="fas fa-user-circle"></i>
-                        <span>USER</span>
-                    </div>
-
-                    <div class="aside-box active">
-                        <i class="fas fa-globe"></i>
-                        <span>CHANNEL</span>
-                    </div>
-
-                </aside>
-            </div>
 
             <div id="main">
                 <main>
@@ -86,7 +104,7 @@
 
                     <div class="main-body">
 
-                        <div class="main-left">
+                        <div class="main-left none">
                             <div class="option-box">
 
                                 <div class="option-header active">
@@ -381,13 +399,8 @@
 
                                     <!-- order END -->
                                     <div class="channel-pagination">
-                                        <div class="newer">
-                                            <i class="fa fa-chevron-left"></i>
-                                            <span>NEWER</span>
-                                        </div>
-                                        <div class="older">
-                                            <span>OLDER</span>
-                                            <i class="fa fa-chevron-right"></i>
+                                        <div class="older more">
+                                            <span>더보기</span>
                                         </div>
                                     </div>
 
@@ -407,6 +420,27 @@
                 </main>
             </div>
 
+        </div>
+
+        <div id="footer">
+                <footer>
+                    <div class="footer-box active">
+                        <i class="fas fa-user-circle"></i>
+                        <span>USER</span>
+                    </div>
+                    <div class="footer-box">
+                        <a href="../stats/index.html">
+                            <i class="fas fa-globe"></i>
+                            <span>CHANNEL</span>
+                        </a>
+                    </div>
+                    <div class="footer-box">
+                        <a href="../app/config.html">
+                            <i class="fas fa-power-off"></i>
+                            <span>LOGOUT</span>
+                        </a>
+                    </div>
+                </footer>
         </div>
     </div>
 </body>
