--- a/web/app/event.html
+++ b/web/app/event.html
@@ -433,7 +433,7 @@
                                         </div>
 
                                         <!-- expand -->
-                                        <div class="event-expand none">
+                                        <div class="event-expand">
 
                                             <div class="expand-header">
                                                 <div class="ev-id">
