mobile-web-app-capable

--- a/new/index.html
+++ b/new/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="mobile-web-app-capable" content="yes">
     <style>
         html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
@@ -25,7 +26,7 @@
         main .total_board .total_orders{font-size: 18px; font-weight: 900; margin-left: 4px;}
         main .list_board {padding: 8px;}
 
-        main .list_board ul li {border-radius: 5px; background-color: white; color: black; padding: 8px; display: flex; justify-content: space-between; margin-bottom: 8px;}
+        main .list_board ul li {border-radius: 5px; background-color: white; color: black; padding: 12px 8px; display: flex; justify-content: space-between; margin-bottom: 8px;}
         main .list_board ul li.fail {background-color: #333333;}
         main .list_board ul li.success {background-color: green;}
         main .list_board ul li .state {font-weight: 700;}
@@ -40,10 +41,12 @@
 
 <body>
     <div id="app">
+
         <header>
             <div class="account_name">로또리치</div>
             <div class="option_dots"><a><i class="fas fa-ellipsis-h"></i></a></div>
         </header>
+
         <main>
             <section class="date_board">
                 <span class="start_date">2020-03-10</span><span class="date_distance">~</span><span class="end_date">2020-03-18</span>
@@ -66,6 +69,7 @@
                 </ul>
             </section>
         </main>
+
         <footer>
             <nav>
                 <ul>
@@ -76,6 +80,7 @@
                 </ul>
             </nav>
         </footer>
+
     </div>
 </body>
 
