web-app-capable

--- a/new/index.html
+++ b/new/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <style>
         html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
