--- a/new/index.html
+++ b/new/index.html
@@ -5,15 +5,18 @@
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=320,minimum-scale=1.0,maximum-scale=4.0,user-scalable=no">
+    <meta name="keywords" content="">			
+    <meta name="description" content="">		
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />			
     <style>
         html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
         ul {list-style: none;}
 
-        #app {margin: 0 auto; width: 100vw; height: 100vh; max-width: 360px; background-color:#141c1f; color: white;}
+        #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color:#141c1f; color: white;}
         
         header {height: 30px; display: flex; justify-content: space-between; align-items: center; padding: 8px;}
         header .account_name {font-weight: 700;}
