--- a/new/index.html
+++ b/new/index.html
@@ -36,20 +36,31 @@
         main .list_board ul li .state {font-weight: 700;}
         main .list_board ul li .date {color: #aaaaaa;}
 
-        footer nav ul {display: flex; width: 100vw; height: 48px; background-color: black; position: fixed; bottom: 0; justify-content: space-around; align-items: center;}
+        footer nav ul {display: flex; width: 320px; height: 48px; background-color: black; position: fixed; bottom: 0; justify-content: space-around; align-items: center;}
         footer nav ul li {font-size: 18px;}
+
+        #filter {position: fixed; top: 0; right: 0; width: 75vw; height: 100vh; background-color: rgba(0, 0, 0, 1); z-index: 2;}
+        #filter .fil_head {display: flex; justify-content: space-between; align-items: center; height: 30px; padding: 8px;}
+        #filter .date_option .selector .date{display: flex; justify-content: space-between; padding: 4px 8px;}
         
         
     </style>
 </head>
 
 <body>
+
     <div id="app">
 
         <header>
             <div class="account_name">로또리치</div>
             <div class="option_dots"><a><i class="fas fa-ellipsis-h"></i></a></div>
         </header>
+
+        <script>
+            $('.option_dots').on('click',function(){
+                $('#filter').fadeIn();
+            })
+        </script>
 
         <main>
             <section class="date_board">
@@ -84,6 +95,38 @@
                 </ul>
             </nav>
         </footer>
+
+        <div id="filter" style="display: none;">
+            <section class="fil_head">
+                <div class="title">FILTER</div>
+                <div class="close"><a><i class="fas fa-times"></i></a></div>
+            </section>
+            <section class="date_option">
+                <div class="selector">
+                    <div class="start date">
+                        <label>시작일</label><input type="date" value="2020-01-01">
+                    </div>
+                    <div class="end date">
+                        <label>종료일</label><input type="date" value="2020-03-20">
+                    </div>
+                </div>
+                <div class="shortcuts">
+                    <ul>
+                        <li>
+                            <div class="today">오늘</div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="state_option">
+            </section>
+        </div>
+
+        <script>
+            $('.close').on('click',function(){
+                $('#filter').fadeOut();
+            })
+        </script>
 
     </div>
 </body>
