--- a/new/orders.html
+++ b/new/orders.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=320,minimum-scale=1.0,maximum-scale=4.0,user-scalable=no">
     <meta name="keywords" content="">			
     <meta name="description" content="">		
@@ -12,6 +13,31 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />			
     <style>
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 22px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
         html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
         ul {list-style: none;}
@@ -137,7 +163,7 @@
                 }
 
                 function deleteOrder(){
-                    if(prompt('"주문삭제확인"을 입력해주세요')=="주문삭제확인"){
+                    if(prompt('"삭제확인"을 입력해주세요')=="삭제확인"){
                         alert('삭제하였습니다');
                     }else{
                         alert('삭제하지 못했습니다.');
@@ -150,10 +176,10 @@
         <footer>
             <nav>
                 <ul>
-                    <li class="nav_list"><a href="./index.html"><i class="fas fa-list-alt"></i></a></li>
-                    <li class="nav_orders"><a href="./orders.html"></a><i class="fas fa-users"></i></a></li>
-                    <li class="nav_stats"><i class="fas fa-chart-bar"></i></li>
-                    <li class="nav_mypage"><i class="fas fa-cog"></i></li>
+                    <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
+                    <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
+                    <li class="nav_stats"><i class="material-icons">pie_chart</i></li>
+                    <li class="nav_mypage"><i class="material-icons">settings</i></li>
                 </ul>
             </nav>
         </footer>
@@ -197,6 +223,7 @@
         </script>
 
     </div>
+    
 </body>
 
 </html>
