--- a/new/index.html
+++ b/new/index.html
@@ -58,8 +58,10 @@
 
         main .list_board {padding: 8px;}
         main .list_board ul li {border-radius: 5px; background-color: white; color: black; padding: 12px 8px; display: flex; justify-content: space-between; margin-bottom: 8px;}
-        main .list_board ul li.fail {background-color: #333333; color: white;}
-        main .list_board ul li.success {background-color: green; color: white;}
+        main .list_board ul li.fail {background-color: tomato; color: white;}
+        main .list_board ul li.fail .date {color: white;}
+        main .list_board ul li.success {background-color: lightseagreen; color: white;}
+        main .list_board ul li.success .date {color: white;}
         main .list_board ul li .state {font-weight: 700;}
         main .list_board ul li .date {color: #aaaaaa;}
 
@@ -83,8 +85,8 @@
         #filter .state_option table {width: 100%; line-height: 24px; padding: 6px;}
         #filter .state_option table td{width: 33.3%; height: 35px; text-align: center;  font-size: 12px; font-size: 900; border-radius: 5px;}
         #filter .state_option table td.normal {background-color: white; color: black; border: 1px solid black;}
-        #filter .state_option table td.fail {background-color: #333333; color: white; }
-        #filter .state_option table td.success {background-color: green; color: white; }
+        #filter .state_option table td.fail {background-color: tomato; color: white; }
+        #filter .state_option table td.success {background-color: lightseagreen; color: white; }
         
         #filter .confirm {position: absolute; right: 16px; bottom: 16px; text-align: center; padding: 4px 12px; }
         
