--- a/new/index.html
+++ b/new/index.html
@@ -73,6 +73,8 @@
         #filter .fil_head {height: 30px; padding: 8px;}
         #filter .fil_head .title {font-weight: 900;}
 
+
+
         #filter .date_option .selector {display: flex; justify-content: space-around; align-items: center; }
         #filter .date_option .selector .date{display: flex; justify-content: space-between; align-items: center; padding: 4px 8px;}
         #filter .date_option .selector .date label {font-weight: 700;}
@@ -109,7 +111,7 @@
 
         <header>
             <div class="account_name">로또리치</div>
-            <div class="option_dots"><a><i class="material-icons">sort</i></a></div>
+            <div class="option_dots"><a><i class="material-icons">more_horiz</i></a></div>
         </header>
 
         <script>
