--- a/new/orders.html
+++ b/new/orders.html
@@ -81,7 +81,7 @@
 
         <header>
             <div class="account_name">로또리치</div>
-            <div class="option_dots"><a><i class="fas fa-ellipsis-h"></i></a></div>
+            <!-- <div class="option_dots"><a><i class="fas fa-ellipsis-h"></i></a></div> -->
         </header>
 
         <script>
