--- a/new/index.html
+++ b/new/index.html
@@ -37,17 +37,19 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
-        html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
+        html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px; background-color:#141c1f; }
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
         ul {list-style: none;}
 
 
         #loading {width: 100vw; height: 100vh; top: 0; left: 0; right: 0; bottom: 0; display: flex; justify-content: center; align-items: center;}
-        #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color:#141c1f; color: white;}
+        #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; color: white;}
         
-        header {height: 30px; display: flex; justify-content: space-between; align-items: center; padding: 8px;}
-        header .account_name {font-weight: 700;}
-        header i {font-size: 18px;}
+        header {height: 40px; display: flex; justify-content: space-between; align-items: center; padding:0; position: fixed; top:0; left: 0; width: 320px; background-color: #141c1f;}
+        header .account_name {font-weight: 700; padding-left: 8px;}
+        header i {font-size: 18px; padding-right: 8px;}
+
+        main {padding-top: 40px;}
         
         main .date_board {padding: 8px; font-weight: 700;}
         main .date_board .date_distance {margin: 0 5px;}
@@ -128,10 +130,80 @@
             <section class="list_board">
                 <ul>
                     <a href="./orders.html">
-                    <li class="normal">
-                        <span class="state">대기</span>
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <li class="fail">
+                        <span class="state">거절</span>
                         <span class="date">2020-03-18,16:44:15</span>
                     </li>
+                    <li class="success">
+                        <span class="state">결재</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <li class="fail">
+                        <span class="state">거절</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <li class="success">
+                        <span class="state">결재</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <li class="fail">
+                        <span class="state">거절</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <li class="success">
+                        <span class="state">결재</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <li class="fail">
+                        <span class="state">거절</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <li class="success">
+                        <span class="state">결재</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <li class="fail">
+                        <span class="state">거절</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <li class="success">
+                        <span class="state">결재</span>
+                        <span class="date">2020-03-18,16:44:15</span>
+                    </li>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
                     </a>
                     <li class="fail">
                         <span class="state">거절</span>
