--- a/new/index.html
+++ b/new/index.html
@@ -36,8 +36,11 @@
 
   /* Support for IE. */
   font-feature-settings: 'liga';
+
+        
 }
-        html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px; background-color:#141c1f; }
+        html {background-color:#141c1f;}
+        html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
         ul {list-style: none;}
 
