--- a/new/index.html
+++ b/new/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />			
     <style>
-.material-icons {
+    .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
@@ -39,7 +39,7 @@
 
         
 }
-        html {background-color:#141c1f;}
+        html {background-color:#222a35;}
         html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
         ul {list-style: none;}
@@ -48,7 +48,7 @@
         #loading {width: 100vw; height: 100vh; top: 0; left: 0; right: 0; bottom: 0; display: flex; justify-content: center; align-items: center;}
         #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; color: white;}
         
-        header {height: 40px; display: flex; justify-content: space-between; align-items: center; padding:0; position: fixed; top:0; left: 0; width: 320px; background-color: #141c1f;}
+        header {height: 40px; display: flex; justify-content: space-between; align-items: center; padding:0; position: fixed; top:0; left: 0; width: 320px; background-color: #222a35;}
         header .account_name {font-weight: 700; padding-left: 8px;}
         header i {font-size: 18px; padding-right: 8px;}
 
@@ -61,7 +61,7 @@
         main .total_board .total {font-size: 36px; font-weight: 900;}
         main .total_board .total_orders{font-size: 18px; font-weight: 900; margin-left: 4px;}
 
-        main .list_board {padding: 8px;}
+        main .list_board {padding: 8px; padding-bottom: 50px;}
         main .list_board ul li {border-radius: 5px; background-color: white; color: black; padding: 12px 8px; display: flex; justify-content: space-between; margin-bottom: 8px;}
         main .list_board ul li.fail {background-color: tomato; color: white;}
         main .list_board ul li.fail .date {color: white;}
@@ -129,9 +129,29 @@
             <section class="date_board">
                 <span class="start_date">2020-03-10</span><span class="date_distance">~</span><span class="end_date">2020-03-18</span>
             </section>
-            <section class="total_board"><span class="total">54</span><span class="total_orders">orders</span></section>
+            <section class="total_board">
+                <span class="total">54</span><span class="total_orders">orders</span>
+            </section>
             <section class="list_board">
                 <ul>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
+                    <a href="./orders.html">
+                        <li class="normal">
+                            <span class="state">대기</span>
+                            <span class="date">2020-03-18,16:44:15</span>
+                        </li>
+                    </a>
                     <a href="./orders.html">
                         <li class="normal">
                             <span class="state">대기</span>
@@ -225,7 +245,7 @@
                 <ul>
                     <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
                     <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
-                    <li class="nav_stats"><i class="material-icons">pie_chart</i></li>
+                    <li class="nav_stats"><a href="chart.html"><i class="material-icons">pie_chart</i></a></li>
                     <li class="nav_mypage"><i class="material-icons">settings</i></li>
                 </ul>
             </nav>
