--- a/new/login.html
+++ b/new/login.html
@@ -12,8 +12,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <style>
-            html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px; background-color:#141c1f;}
-            #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color:#141c1f; color: white;}
+            html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px; background-color:#222a35;}
+            #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px;color: white;}
             .logo {margin: 0 auto; width: 100px; padding-top: 80px; text-align: center;}
             .logo img {width: 80px; height: 80px; border-radius: 10px; background-color: gray;}
 
