--- a/new/orders.html
+++ b/new/orders.html
@@ -38,11 +38,12 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+        html {background-color:#222a35;}
         html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
         a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
         ul {list-style: none;}
 
-        #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color:#141c1f; color: white;}
+        #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; color: white;}
         
         header {height: 30px; display: flex; justify-content: space-between; align-items: center; padding: 8px;}
         header .account_name {font-weight: 700;}
