--- a/new/index.html
+++ b/new/index.html
@@ -57,9 +57,9 @@
         main .date_board {padding: 8px; font-weight: 700;}
         main .date_board .date_distance {margin: 0 5px;}
 
-        main .total_board {background-color: #03bafc; display: flex; align-items: baseline; padding: 24px 8px;}
-        main .total_board .total {font-size: 36px; font-weight: 900;}
-        main .total_board .total_orders{font-size: 18px; font-weight: 900; margin-left: 4px;}
+        main .screen_board .total_board {background-color: #03bafc; display: flex; align-items: baseline; padding: 24px 8px;}
+        main .screen_board .total_board .total {font-size: 36px; font-weight: 900;}
+        main .screen_board .total_board .total_orders{font-size: 18px; font-weight: 900; margin-left: 4px;}
 
         main .list_board {padding: 8px; padding-bottom: 50px;}
         main .list_board ul li {border-radius: 5px; background-color: white; color: black; padding: 12px 8px; display: flex; justify-content: space-between; margin-bottom: 8px;}
@@ -129,8 +129,12 @@
             <section class="date_board">
                 <span class="start_date">2020-03-10</span><span class="date_distance">~</span><span class="end_date">2020-03-18</span>
             </section>
-            <section class="total_board">
-                <span class="total">54</span><span class="total_orders">orders</span>
+            <section class="screen_board">
+                <ul>
+                    <li class="total_board">
+                        <span class="total">54</span><span class="total_orders">orders</span>
+                    </li>
+                </ul>
             </section>
             <section class="list_board">
                 <ul>
