--- a/new/orders.html
+++ b/new/orders.html
@@ -60,6 +60,7 @@
         main .order_board ul li .content_list .handler {line-height: 24px; border-bottom: 1px solid #eeeeee; width: 100%;}
         main .order_board ul li .content_list .handler .handler_label {font-weight: 900; width: 30%; vertical-align: top;}
         main .order_board ul li .content_list .handler .handler_value {width: 70%;}
+        main .order_board ul li .content_list .handler .handler_value select {width: 60%; border: none; border-bottom: 1px solid #efefef;}
         main .order_board ul li .content_list textarea {width: 100%; height: 250px; margin-top: 8px; border: none; resize: none; font-size: 10px;}
 
         main .buttons {display: flex; justify-content: space-around;}
@@ -96,6 +97,7 @@
                 <ul>
                     <li>
                         <div class="content_list">
+
                             <table class="income">
                                 <tr>
                                     <td class="income_label">입력시간</td>
@@ -114,6 +116,7 @@
                                     <td class="income_value">1130</td>
                                 </tr>
                             </table>
+
                             <table class="handler">
                                 <tr>
                                     <td class="handler_label">유효성</td>
@@ -125,7 +128,26 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="handler_label">상태</td>
+                                    <td class="handler_label">분배설정</td>
+                                    <td class="handler_value">
+                                        <select>
+                                            <option value="1" selected>OPEN</option>
+                                            <option value="0">CLOSE</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="handler_label">담당자</td>
+                                    <td class="handler_value">
+                                        <select>
+                                            <option value="0" selected>ALL</option>
+                                            <option value="1">PLAYER1</option>
+                                            <option value="2">PLAYER2</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="handler_label">처리상태</td>
                                     <td class="handler_value">
                                         <select>
                                             <option value="1" selected>대기</option>
@@ -175,7 +197,7 @@
                 <ul>
                     <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
                     <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
-                    <li class="nav_stats"><i class="material-icons">pie_chart</i></li>
+                    <li class="nav_stats"><a href="chart.html"><i class="material-icons">pie_chart</i></a></li>
                     <li class="nav_mypage"><i class="material-icons">settings</i></li>
                 </ul>
             </nav>
