--- a/new/chart.html
+++ b/new/chart.html
@@ -74,7 +74,7 @@
     main .chart_board .chart .state .values {background-color: #dddddd; width: 100px; text-align: right; border-bottom-right-radius: 5px; border-top-right-radius: 5px; color: black; font-weight: 900; padding-right: 10px; height: 100%; display: flex; justify-content: flex-end; align-items: center;}
 
     main .chart_board .chart .player { margin: 8px 0; }
-    main .chart_board .chart .player .summary {border-radius: 5px; height: 30px; display: flex; justify-content: space-between; align-items: center; width: 100%; background-color: white; color: black;}
+    main .chart_board .chart .player .summary {border-radius: 5px; padding: 8px 0; display: flex; justify-content: space-between; align-items: center; width: 100%; background-color: white; color: black;}
     main .chart_board .chart .player .summary .user {display: flex; justify-content: space-between; align-items: center; width: 30%; padding-left: 8px;}
     main .chart_board .chart .player .summary .user .name {font-weight: 700;}
     main .chart_board .chart .player .summary .total {padding-right: 8px;}
