--- a/new/chart.html
+++ b/new/chart.html
@@ -364,12 +364,14 @@
 
             <footer>
                 <nav>
-                    <ul>
-                        <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
-                        <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
-                        <li class="nav_stats"><a href="chart.html"><i class="material-icons">pie_chart</i></a></li>
-                        <li class="nav_mypage"><i class="material-icons">settings</i></li>
-                    </ul>
+                    <nav>
+                        <ul>
+                            <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
+                            <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
+                            <li class="nav_stats"><a href="chart.html"><i class="material-icons">pie_chart</i></a></li>
+                            <li class="nav_mypage"><a href="config.html"><i class="material-icons">settings</i></a></li>
+                        </ul>
+                    </nav>
                 </nav>
             </footer>
     
