--- a/new/config.html
+++ b/new/config.html
@@ -38,13 +38,14 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+    html {background-color:#222a35;}
     html, body, div, ul, ol, li {margin: 0; padding: 0; font-size: 12px;}
     a, a:hover, a:link, a:visited, a:focus {text-decoration: none; color: inherit;}
     ul {list-style: none;}
 
 
     #loading {width: 100vw; height: 100vh; top: 0; left: 0; right: 0; bottom: 0; display: flex; justify-content: center; align-items: center;}
-    #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; background-color:#141c1f; color: white;}
+    #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; color: white;}
     
     header {height: 30px; display: flex; justify-content: space-between; align-items: center; padding: 8px;}
     header .account_name {font-weight: 700;}
