--- a/new/index.html
+++ b/new/index.html
@@ -49,7 +49,7 @@
         #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; color: white;}
         
         header {height: 40px; display: flex; justify-content: space-between; align-items: center; padding:0; position: fixed; top:0; left: 0; width: 320px; background-color: #222a35;}
-        header .account_name {font-weight: 700; padding-left: 8px;}
+        header .account_name {font-weight: 700; padding-left: 14px; font-size: 14px;}
         header i {font-size: 18px; padding-right: 8px;}
 
         main {padding-top: 40px;}
