--- a/new/chart.html
+++ b/new/chart.html
@@ -59,8 +59,11 @@
     main .tab_board .tablinks.active {font-weight: 900; font-size: 16px;}
 
     main .chart_board .option {background-color: #03bafc; display: flex; height: 30px; align-items: center; justify-content: space-around; color: white; font-weight: 700;}
+    main .chart_board .option input[type="date"] {background-color: transparent; color: white; border:none; outline: none;text-align: center; padding: 0; font-size: 12px; font-weight: 700; font-family: inherit;}
     main .chart_board .option #year_month {font-size: 16px; font-weight: 900;}
     main .chart_board .chart {margin: 0 auto; width: 95vw; height: 100%; margin-top: 10px;}
+
+   
 
     main .chart_board .chart#tab01 {background-color: white; color: black;}
     main .chart_board .chart #calendar_table {width: 100%; border: 1px solid black; text-align: center; border-collapse: collapse;}
