--- a/new/orders.html
+++ b/new/orders.html
@@ -46,7 +46,7 @@
         #app {margin: 0 auto; width: 100vw; height: 100vh; width: 320px; color: white;}
         
         header {height: 30px; display: flex; justify-content: space-between; align-items: center; padding: 8px;}
-        header .account_name {font-weight: 700;}
+        header .account_name {font-weight: 700; padding-left: 6px; font-size: 14px;}
         header i {font-size: 18px;}
         
 
